# live_video_streaming_server_2

./: pyproject.toml
server_poetry/: index.html  process.py  toml.txt
